<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/HeaderTabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/AboutMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AboutMe" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Work"
            tools:layout_editor_absoluteX="211dp"
            tools:layout_editor_absoluteY="147dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Contact" />
    </com.google.android.material.tabs.TabLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="66dp"
        android:background="@drawable/profile_background"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderTabLayout"
        app:srcCompat="@drawable/picture1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="-50dp"
        android:fontFamily="sans-serif-black"
        android:text="Asteway Yiheyis"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="21dp"
        android:text="Software Developer"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:id="@+id/AboutMeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20px"
            android:text="Career Note \n \n Completed on-campus studies and currently taking distance education courses to complete a Master's Degree in Computer Science (Available for full-time, W-2 employment)" />

        <TextView
            android:id="@+id/Education"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20px"
            android:paddingTop="30px"
            android:text="Work Experience \n \n Languages:  Java, Python, C#, C++ Web:  HTML5, CSS3, JavaScript, jQuery, AJAX, XML, Node.js, Express, Axios, Fetch-API Webservices:  Restful, JSON, Rest Template Web/App Servers: Apache Tomcat Frameworks:  React, Spring/Spring Boot (Data, Security, AOP, IOC, Dependency Injection (DI)), Hibernate, .NET,  Databases:  SQL, JPA, JDBC " />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>