<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/HeaderTabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/AboutMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AboutMe" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Work"
            tools:layout_editor_absoluteX="211dp"
            tools:layout_editor_absoluteY="147dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Contact" />
    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="325dp"></LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderTabLayout">

        <TextView
            android:id="@+id/AboutMeTextView"
            android:layout_width="356dp"
            android:layout_height="219dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="20px"
            android:text="About Me \n \n Versatile IT professional with 5+ years of experience blending strong technical, analytical, and operational skills to assess and address the needs of diverse users. Adept in development of responsive, interactive applications for companies ranging in size and complexity. Experienced working with diverse teams, clients, and system users – analyzing and troubleshooting technical issues in fast-paced environments using Java, Spring, Hibernate, JavaScript, and Restful API. Experienced in front-end development using HTML5, CSS3, SASS, and React. " />

        <TextView
            android:id="@+id/Education_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20px"
            android:paddingTop="30px"
            android:text="Education" />

        <LinearLayout
            android:layout_width="391dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="225dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/maharishi_international_university_logo_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3_2"
                    android:layout_width="wrap_content"
                    android:layout_height="8dp"
                    android:layout_weight="1"
                    android:text="Maharishi International University"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView4_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="Master of Science in Computer Science" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="391dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_2"
                android:layout_width="225dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/blc_seal_web" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="8dp"
                    android:layout_weight="1"
                    android:text="Maharishi International University"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:text="Master of Science in Computer Science" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>