<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/HeaderTabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Home" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/AboutMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AboutMe" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Work"
            tools:layout_editor_absoluteX="211dp"
            tools:layout_editor_absoluteY="147dp" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/Contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Contact" />
    </com.google.android.material.tabs.TabLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="406dp"
        android:layout_height="300dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderTabLayout">

        <TextView
            android:id="@+id/WorkText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20px"
            android:paddingTop="30px"
            android:text="@string/Work" />

        <LinearLayout
            android:layout_width="391dp"
            android:layout_height="51dp"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="154dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/img_au_logo_palmleaves" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="African Union Commission"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2019-2020" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="MIT consultant" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="391dp"
            android:layout_height="51dp"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="154dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/vamdaslogovertlrg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Vamdas"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView4_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2016-2020" />

                <TextView
                    android:id="@+id/textView4_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Software Developer" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="391dp"
            android:layout_height="51dp"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="154dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/perficicent_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Perficient"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView4_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2022-Current" />

                <TextView
                    android:id="@+id/textView4_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Software Developer" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>